# org-develop

./: .gitignore  CLAUDE.md  start.sh  stop.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  security.py
backend/app/models/: __init__.py  audit.py  auth.py  base.py  iteration.py  organization.py  project.py  requirement.py  specification.py  task.py  team.py  testcase.py  user.py  webhook.py
backend/app/routers/: audit.py  auth.py  coverage.py  iterations.py  projects.py  requirements.py  specifications.py  tasks.py  teams.py  testcases.py  users.py  webhooks.py
backend/app/schemas/: __init__.py  audit.py  common.py  iteration.py  project.py  requirement.py  specification.py  task.py  team.py  testcase.py  user.py
backend/app/services/: __init__.py  audit.py  clause.py  coverage.py  iteration.py  project.py  requirement.py  spec_validation.py  specification.py  task.py  team.py  testcase.py  user.py  webhook.py
backend/tests/: conftest.py  test_audit_service.py  test_clause_service.py  test_edit_functionality.py  test_iteration_service.py  test_pagination.py  test_project_service.py  test_spec_driven_flow.py  test_specification_service.py  test_task_service.py  test_team_service.py  test_testcase_service.py  test_user_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  uno.config.ts  vite.config.ts
tests/: conftest.py  pyproject.toml  test_audit.py  (+13 more)
(+64 files in other folders)
